fixing thread placement on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -642,6 +642,9 @@ textarea {
         width: 100%;
         height: 200px;
     }
+    .last {
+        margin-bottom: 2em;
+    }
 
 }
 
